syntax = "proto3";

option go_package = "github.com/rishiraj-intel/grpc-go/protofile";
// Artifact & Node Endpoints towards Inventory Manager
package protofile;
service NodeArtifactServiceNB {
  rpc FdoOnboardingTo2Req(FdoOnboardingReq) returns (FdoOnboardingResponse) {}
}

message FdoOnboardingReq {
  string request = 1;
}

message FdoOnboardingResponse {
  string Response = 1;
}
